Added word completion rules to the MarkupGenerator.

--- a/plugins/gdp/data/snark.html
+++ b/plugins/gdp/data/snark.html
@@ -12,10 +12,10 @@
       The Hunting of The Snark
       <br />an Agony in Eight Fits
     </h1>
-    <p>
+    <p class="by-line">
        by Lewis Carroll
     </p>
-    <div>
+    <div class="preface">
       <h2>
         PREFACE
       </h2>
@@ -86,7 +86,7 @@
  gasped out "Rilchiam!"
       </p>
     </div> 
-    <div>
+    <div class="fit">
       <h2>
        Fit the First 
        <br />THE LANDING
